Add ability to poison specific builds, so they don't get recommended.
